Fix rendering borders the proper size with software fallback

Apparently using qpainter strokes results in unpredictable behaviour so
do the same thing we do in the shaders and first render a rectangle at
full size with border color, then a smaller one with fill color.

BUG: 427556